unpackaged/main/default/objects/Brand__c/Brand__c.object-meta.xml
<CustomObject>
    <label>Brand</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Brand Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>