unpackaged/main/default/objects/Brand__c/fields/Booth_Space_Cost_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Booth_Space_Cost_Estimated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Booth Space Cost Estimated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>