unpackaged/main/default/objects/Brand__c/fields/Brand_Category__c.field-meta.xml
<CustomField>
    <fullName>Brand_Category__c</fullName>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anti Infectives</fullName>
            </value>
            <value>
                <fullName>Biosimilars</fullName>
            </value>
            <value>
                <fullName>CentreOne</fullName>
            </value>
            <value>
                <fullName>Consumer Healthcare</fullName>
            </value>
            <value>
                <fullName>DoD</fullName>
            </value>
            <value>
                <fullName>Greenstone</fullName>
            </value>
            <value>
                <fullName>Inflammation and Immunology</fullName>
            </value>
            <value>
                <fullName>Internal Medicine (CV/Metabolics)</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Rare Diseases</fullName>
            </value>
            <value>
                <fullName>Sterile Injectables</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Vaccines</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>