unpackaged/main/default/objects/Brand__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acrodat</fullName>
            </value>
            <value>
                <fullName>Alopeca</fullName>
            </value>
            <value>
                <fullName>Alt Site</fullName>
            </value>
            <value>
                <fullName>Anti Infectives</fullName>
            </value>
            <value>
                <fullName>Atgam</fullName>
            </value>
            <value>
                <fullName>Avelumab</fullName>
            </value>
            <value>
                <fullName>Bavencio</fullName>
            </value>
            <value>
                <fullName>BeneFIX</fullName>
            </value>
            <value>
                <fullName>BeneFIX (Europe Only)</fullName>
            </value>
            <value>
                <fullName>Besponsa</fullName>
            </value>
            <value>
                <fullName>Bosulif</fullName>
            </value>
            <value>
                <fullName>Braftovi</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>CentreOne</fullName>
            </value>
            <value>
                <fullName>Champix</fullName>
            </value>
            <value>
                <fullName>Chantix</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Consumer Above Brand</fullName>
            </value>
            <value>
                <fullName>Consumer Healthcare</fullName>
            </value>
            <value>
                <fullName>Cresemba</fullName>
            </value>
            <value>
                <fullName>Crisaborole</fullName>
            </value>
            <value>
                <fullName>Cutaquig</fullName>
            </value>
            <value>
                <fullName>Daurismo</fullName>
            </value>
            <value>
                <fullName>DoD</fullName>
            </value>
            <value>
                <fullName>Duavee</fullName>
            </value>
            <value>
                <fullName>eATG</fullName>
            </value>
            <value>
                <fullName>Ecalta</fullName>
            </value>
            <value>
                <fullName>Elelyso</fullName>
            </value>
            <value>
                <fullName>Eliquis</fullName>
            </value>
            <value>
                <fullName>Enbrel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>