unpackaged/main/default/objects/Brand__c/fields/Brand_Team_Contact__c.field-meta.xml
<CustomField>
    <fullName>Brand_Team_Contact__c</fullName>
    <label>Brand Team Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adamczyk, Alice</fullName>
            </value>
            <value>
                <fullName>Akkad, Fouad</fullName>
            </value>
            <value>
                <fullName>Alitto, Liana</fullName>
            </value>
            <value>
                <fullName>Alper (Schubach), Jen</fullName>
            </value>
            <value>
                <fullName>Andrei, Elisa</fullName>
            </value>
            <value>
                <fullName>Anjos, Suzana</fullName>
            </value>
            <value>
                <fullName>Apostolakis, Yannis</fullName>
            </value>
            <value>
                <fullName>Appel, Pam</fullName>
            </value>
            <value>
                <fullName>Appetiti, Valentina</fullName>
            </value>
            <value>
                <fullName>Arghir, Andrei</fullName>
            </value>
            <value>
                <fullName>Bagchi, Madhavi</fullName>
            </value>
            <value>
                <fullName>Bakken, Dan</fullName>
            </value>
            <value>
                <fullName>Ilana Barishman</fullName>
                <label>Barishman, Ilana</label>
            </value>
            <value>
                <fullName>Bean, Erika</fullName>
            </value>
            <value>
                <fullName>Beck, Elizabeth</fullName>
            </value>
            <value>
                <fullName>Belenkiy, Ilya</fullName>
            </value>
            <value>
                <fullName>Bhalla, Atul</fullName>
            </value>
            <value>
                <fullName>Boesch, Jerry</fullName>
            </value>
            <value>
                <fullName>Bradatan, Bogdan</fullName>
            </value>
            <value>
                <fullName>Brand, Lyndsey</fullName>
            </value>
            <value>
                <fullName>Bugbee, Todd</fullName>
            </value>
            <value>
                <fullName>Burnett, Beth</fullName>
            </value>
            <value>
                <fullName>Carmen, Maria</fullName>
            </value>
            <value>
                <fullName>Carver, Jeff</fullName>
            </value>
            <value>
                <fullName>Cassidy Crook</fullName>
            </value>
            <value>
                <fullName>Catela, Maria</fullName>
            </value>
            <value>
                <fullName>Cerati, Elisa</fullName>
            </value>
            <value>
                <fullName>Chadwick, Ben</fullName>
            </value>
            <value>
                <fullName>Chaturvedi, Tanya</fullName>
            </value>
            <value>
                <fullName>Chen, Jerry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>