unpackaged/main/default/objects/Brand__c/fields/Budget_Owner__c.field-meta.xml
<CustomField>
    <fullName>Budget_Owner__c</fullName>
    <label>Budget Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>