unpackaged/main/default/objects/Brand__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>PIH</fullName>
            </value>
            <value>
                <fullName>CBO</fullName>
            </value>
            <value>
                <fullName>PBG</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <isActive>false</isActive>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>PEH</fullName>
                <isActive>false</isActive>
                <label>PEH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>