unpackaged/main/default/objects/Brand__c/fields/COE_Supported__c.field-meta.xml
<CustomField>
    <fullName>COE_Supported__c</fullName>
    <defaultValue>true</defaultValue>
    <label>COE Supported</label>
    <type>Checkbox</type>
</CustomField>