unpackaged/main/default/objects/Brand__c/fields/Exhibit_Instance__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Instance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Exhibit Instance</label>
    <referenceTo>Exhibit__c</referenceTo>
    <relationshipLabel>Brand</relationshipLabel>
    <relationshipName>Brand_Instance</relationshipName>
    <type>Lookup</type>
</CustomField>