unpackaged/main/default/objects/Brand__c/fields/Finance_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Finance_Coordinator__c</fullName>
    <label>Finance Coordinator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>