unpackaged/main/default/objects/Brand__c/fields/Funding_Provider_Region__c.field-meta.xml
<CustomField>
    <fullName>Funding_Provider_Region__c</fullName>
    <label>Funding Provider Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>