unpackaged/main/default/objects/Brand__c/fields/GES_Congress_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Congress_Manager__c</fullName>
    <label>GES Congress Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debbie Hummel</fullName>
            </value>
            <value>
                <fullName>Elena Fezzardi</fullName>
            </value>
            <value>
                <fullName>Eva McCartney</fullName>
            </value>
            <value>
                <fullName>Gail Griffith</fullName>
            </value>
            <value>
                <fullName>Ilysa Link</fullName>
            </value>
            <value>
                <fullName>Julia Noonan</fullName>
            </value>
            <value>
                <fullName>Linnell Navarro</fullName>
            </value>
            <value>
                <fullName>Michelle Pflug</fullName>
            </value>
            <value>
                <fullName>Stephanie Houck</fullName>
            </value>
            <value>
                <fullName>Tricia Purcell</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>