unpackaged/main/default/objects/Brand__c/fields/GES_Connect_Corporate_Accounts__c.field-meta.xml
<CustomField>
    <fullName>GES_Connect_Corporate_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GES Connect - Corporate Accounts</label>
    <referenceTo>GES_Connect_Corporate_Accounts__c</referenceTo>
    <relationshipLabel>Brand</relationshipLabel>
    <relationshipName>Brand</relationshipName>
    <type>Lookup</type>
</CustomField>