unpackaged/main/default/objects/Brand__c/fields/Meeting_Room__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Room</label>
    <referenceTo>Meeting_Room__c</referenceTo>
    <relationshipLabel>Brand</relationshipLabel>
    <relationshipName>Brand</relationshipName>
    <type>Lookup</type>
</CustomField>