unpackaged/main/default/objects/Brand__c/fields/Meeting_Room_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Estimated_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Meeting Room Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>