unpackaged/main/default/objects/Brand__c/fields/MR_Services_Estimated_Costs__c.field-meta.xml
<CustomField>
    <fullName>MR_Services_Estimated_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MR Services Estimated Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>