unpackaged/main/default/objects/Brand__c/fields/Product_Theater__c.field-meta.xml
<CustomField>
    <fullName>Product_Theater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Theater</label>
    <referenceTo>Product_Theater__c</referenceTo>
    <relationshipLabel>Brand</relationshipLabel>
    <relationshipName>Brand</relationshipName>
    <type>Lookup</type>
</CustomField>