unpackaged/main/default/objects/Brand__c/fields/Product_Theater_Costs_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Product_Theater_Costs_Estimated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Theater Costs Estimated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>