unpackaged/main/default/objects/Brand__c/fields/Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsorship</label>
    <referenceTo>Sponsorship__c</referenceTo>
    <relationshipLabel>Brand</relationshipLabel>
    <relationshipName>Brand</relationshipName>
    <type>Lookup</type>
</CustomField>