unpackaged/main/default/objects/Brand__c/fields/Sponsorship_Budget_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Budget_Estimated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sponsorship Budget Estimated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>