unpackaged/main/default/objects/Brand__c/fields/Symposia_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Symposia_Actual_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Symposia Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>